tutorial/cap-16/language.bnf
addop ::= '+' | '-' | '|' | '~'
mulop ::= '*' | '/' | '&'

factor      ::= variable | constant | '(' expression ')'
notFactor   ::= [!] factor
signedTerm  ::= [addop] term
term        ::= notFactor (mulop notFactor)*
expression  ::= signedTerm (addop term)*
assignment  ::= variable '=' expression
